--- a/perrito.css
+++ b/perrito.css
@@ -1,21 +1,21 @@
 nav {
     width: 100%;
     height: 40px;
-    background-color: aqua;
+    background-color: rgb(145, 255, 0);
     margin: 0px;
     padding: 0px;
     display: block;
 }
 nav > ul > li {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: blueviolet;
+    color: rgb(43, 46, 226);
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 120px;
 }
 
 footer {
-    background-color: brown;
+    background-color: rgb(165, 42, 128);
     height: 80px;
 }
